--- a/project 1/project 1.css
+++ b/project 1/project 1.css
@@ -1,8 +1,6 @@
-.header-area {background-color: #f5f5f5;}
-
- 
- 
-
+.header-area {
+    background-color: #f5f5f5;
+}
 .container {
     width: 85%;
     margin: 0 auto;
@@ -13,10 +11,6 @@
     justify-content: space-between;
     align-items: center;
 }
-
- 
-
-  
 
 .menu ul{
     padding: 0;
@@ -62,11 +56,11 @@ li ul a {
 }
 
 .slider-area{
-background: url('bb\ \(2\).jpg');
-height:500px;
-;background-position:  top;
-background-size: cover;
-background-repeat: no-repeat;}
+    background: url('bb\ \(2\).jpg');
+    height:500px;
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;}
 
 .slider-wrapper {
     width: 70%;
@@ -86,21 +80,16 @@ background-repeat: no-repeat;}
     letter-spacing: 1px;
 }
 
-
-
- 
-
  h1 {
     font-size: 70px;
     text-align: center;
     color: rgb(94, 255, 0);
- 
 }
 
 p {
     font-size: 30px;
     text-align: center;
-  color:rgb(72, 255, 0);
+    color:rgb(72, 255, 0);
 }
 
 
@@ -108,40 +97,31 @@ p {
      width:250px;
      margin:0 10px;
      box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1 );
-transition: :1s;
-
+     transition: :1s;
 }
 
 .box img{
-display:block;
-width:100%;
-border-radius:5px;
-height: 300px;
-border:3px solid rgb(246, 34, 6);
+   display:block;
+   width:100%;
+   border-radius:5px;
+   height: 300px;
+   border:3px solid rgb(246, 34, 6);
 }
 
-
 .container1{
-
     width:90%;
     padding:20px;
     margin:100px auto;
     display:flex;
     flex-direction: row;
     justify-content: center;
-
 }
 
-
- .box:hover{
-  
-  transform: scale(1.3);
-  z-index:2;   
-  
+.box:hover{
+    transform: scale(1.3);
+    z-index:2;   
    }
    
-
-   .background{
-background-color:rgb(98, 255, 0);
-
+.background{
+     background-color:rgb(98, 255, 0);
    }
